--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,11 +9,15 @@ ja:
   label_rqre_gb1: "グローバル設定1"
   label_rqre_setting_tracker_id: "Tracker"
 
+  label_rqre_new: "新規作成"
+  label_rqre_edit: "編集"
+  label_rqre_delete: "削除"
+  label_rqre_delete_message: "削除しますか？"
   label_rqre_title: "タイトル"
   label_rqre_end_datetime: "終了日時"
-  label_rqre_new: "新規作成"
   label_rqre_vote: "回答"
   label_rqre_note: "メモ"
   label_rqre_description: "内容"
   label_rqre_revote: "再回答"
   label_rqre_end: "終了日"
+  label_rqre_dtype: "データタイプ"
