--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,3 +22,5 @@ ja:
   label_rqre_revote: "再回答"
   label_rqre_end: "終了日"
   label_rqre_dtype: "データタイプ"
+  label_rqre_content: "内容"
+  label_rqre_option: "選択肢"
