--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,3 +24,4 @@ en:
   label_rqre_dtype: "Data type"
   label_rqre_content: "Content"
   label_rqre_option: "Option"
+  label_rqre_result: "Result"
